# sns-automation

./: .gitignore  CLAUDE.md  README.md  config.yaml.example  pyproject.toml  requirements.txt  test_idea_generation.py
.claude/commands/: css-audit.md  new-page.md
.streamlit/: config.toml
docs/: user-guide.md
src/sns_automation/: __init__.py  chapter1_strategy.py  chapter2_analysis.py  chapter3_content.py  cli.py
src/sns_automation/utils/: __init__.py  claude_api.py  config.py  elevenlabs_api.py  error_helpers.py  idea_analyzer.py  image_processing.py  linter.py  progress_manager.py  prompt_loader.py  script_previewer.py  sheets_api.py  state_manager.py
src/sns_automation/web/: __init__.py  app.py
src/sns_automation/web/components/: __init__.py  feedback.py  shared.py  styles.py
src/sns_automation/web/pages/: 1_アカウント管理.py  2_戦略設計.py  3_コンテンツ量産.py  4_進捗管理.py
templates/: chapter1.yaml  chapter3.yaml  prompts.yaml.backup
templates/prompts/chapter1/: concept_generation.yaml  pain_extraction.yaml  profile_generation.yaml
